--- a/style.css
+++ b/style.css
@@ -11,25 +11,146 @@ Version: 1.0.1483523464
 
 @import url('https://fonts.googleapis.com/css?family=Cairo:300,400,700|Open+Sans:400,700');
 
+
 body {
     font-family: 'Cairo','Open Sans',  sans-serif;
 }
-
-.facet-treffer {
-    margin-top: 20px;
+h1, h2, h3, h4, h5, h6 {
+    line-height: normal;
 }
-.facet-treffer-mediatyps {
-    font-size: 8px;
-    float: left;
-    padding-right: 5px;
-    padding-top: 5px;
-
+a {
+    color: steelblue;
 }
 
-.facet-treffer-mediatyps ul {
-    list-style: none;
+/* full-width content! +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++*/
+
+/* site width */
+.wrap {
+    max-width: 1200px;
 }
 
+.single-material div#primary.content-area
+{
+    width: 100% !important;
+}
+
+
+/* single material +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++*/
+
+/* material columns layout  */
+.entry-content.material-detail {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-around;
+    align-items: stretch;
+    min-width: 400px;
+    /*min-height: 100vh;*/
+}
+
+.material-column{
+
+}
+
+.material-detail-left {
+    flex: 0 35%;
+}
+.material-detail-right {
+    flex: 0 22%;
+}
+.material-detail-content {
+    flex: 1;
+    padding: 0 20px;
+}
+.material-detail-content-viewer{
+    flex: 1;
+    padding: 0 20px 0 0;
+}
+.material-detail-footer {
+    flex: 1 100%;
+    margin-top: 10px;
+    padding-top: 10px;
+    border-top: 1px solid lightsteelblue;
+}
+
+/* left column items */
+div.material-detail-image, .material-detail .materialpool-template-material-picture-facet{
+    width: 100%;
+}
+.material-detail-content-viewer .material-detail-image{
+    border: 1px solid lightsteelblue;
+    margin-bottom: 20px;
+}
+ /* description column items */
+.material-links, .material-desc {
+    margin-bottom: 30px;
+}
+.material-detail-shortdescription {
+    color: #666;
+    font-size: 130%;
+    font-weight: bolder;
+}
+
+.material-links h4{
+    color: #999;
+    font-weight: 400;
+}
+
+a.cta-button {
+    background-color: #0D5282;
+    border: none;
+    padding: 4px 20px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    border-radius: 5px;
+    margin-top: 5px;
+    color: white;
+    width:100%;
+}
+a.cta-button:hover{
+    background-color: cornflowerblue;
+    box-shadow: none;
+}
+
+ /* right column meta items */
+
+.material-detail-right div p{
+    line-height: 1.4;
+    width:100%;
+}
+.material-detail-right div a{
+    display: block;
+}
+div.material-detail-meta-rating{
+    float: right;
+    width:auto;
+}
+div.facet-treffer-mediatyps{
+    width:auto;
+    float:left;
+}
+.material-meta h4{
+    color: #999;
+    font-weight: 400;
+    margin:0; padding:0;
+    border-bottom: 1px solid cornflowerblue;
+}
+
+.material-detail a{
+    box-shadow:none;
+}
+
+
+
+/* footer meta section */
+.material-detail-schlagworte{
+    margin-bottom: 15px;
+}
+
+/* home +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ */
+
+/* header */
 .startseite-block-header {
     font-family: 'Cairo','Open Sans',  sans-serif;
     font-size: 30px;
@@ -49,8 +170,33 @@ body {
     color: #000000;
 }
 
+
+
+/* material list +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ */
+
+/* facetsearch */
 .blog:not(.has-sidebar) #primary article, .archive:not(.page-one-column):not(.has-sidebar) #primary article, .search:not(.has-sidebar) #primary article, .error404:not(.has-sidebar) #primary .page-content, .error404.has-sidebar #primary .page-content, body.page-two-column:not(.archive) #primary .entry-content, body.page-two-column #comments {
-    width: 98%;
+    width: 100%;
+}
+.page-template-default .entry-content > div{
+    padding-right: 40px;
+}
+
+/* facetts */
+
+.facet-treffer {
+    margin-top: 20px;
+}
+.facet-treffer-mediatyps {
+    font-size: 8px;
+    float: left;
+    padding-right: 5px;
+    padding-top: 5px;
+
+}
+
+.facet-treffer-mediatyps ul {
+    list-style: none;
 }
 
 .facetwp-facet {
@@ -83,9 +229,9 @@ body {
     margin: 0;
 }
 .facet-treffer-content h2 a {
-        color: #0D5282;
-        text-decoration: none;
-        box-shadow: none;
+    color: #0D5282;
+    text-decoration: none;
+    box-shadow: none;
 }
 
 .facet-treffer-content h2 a:hover {
@@ -141,6 +287,8 @@ body {
     box-shadow: none;
 }
 
+
+
 .schlagworte a {
     text-decoration: none;
     box-shadow: none;
@@ -172,123 +320,7 @@ search-description {
     color: #0D5282;
 }
 
-.materialpool-template-material-picture-facet {
+.facet-treffer-content .materialpool-template-material-picture-facet {
     max-width: 200px;
 }
 
-
-.material-detail-left {
-    margin-left: 50px;
-    width: 20%;
-    float: left;
-}
-
-.material-detail-left .materialpool-template-material-picture-facet {
-    max-width: 400px;
-}
-
-.material-detail-content {
-float: left;
-    width: 75%;
-}
-
-.material-detail-header {
-    float: left;
-    width: 100%;
-    padding-right: 20px;
-    margin-left: 50px;
-}
-
-.material-detail-main {
-    float: left;
-    width: 100%;
-}
-
-.material-detail-middle {
-    float: left;
-    width: 80%;
-    min-width: 78%;
-    padding-right: 50px;
-
-}
-
-.material-detail-right {
-    float: left;
-    width: 20%;
-    min-width: 18%;
-    padding-left: 10px;
-
-}
-
-.cta-button {
-    background-color: #0D5282;
-    border: none;
-    color: white;
-    padding: 10px 20px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    border-radius: 12px;
-    margin-top: 5px;
-}
-
-.materialpool-template-material-organisation {
-    margin-top: 20px;
-}
-
-.materialpool-template-material-autor-logo {
-    max-width: 80px;
-    height: auto;
-}
-
-.autor-detail-left {
-    margin-left: 50px;
-    width: 20%;
-    float: left;
-}
-
-. autor-detail-main {
-    width: 70%;
-    float: left;
-}
-
-.materialpool-template-autor-organisation {
-    padding-top: 10px;
-    padding-right: 10px;
-    width: 150px;
-    height: 200px;
-    float: left;
-}
-
-.materialpool-template-autor-material {
-    padding-bottom: 10px;
-    clear: both;
-}
-
-.materialpool-template-autor-material-logo {
-    height: auto;
-    padding-bottom: 20px;
-}
-
-.materialpool-template-material-picture-facet {
-    padding-bottom: 10px;
-}
-
-.site-content {
-    margin-left: 20px;
-}
-
-.material-detail-shortdescription {
-    color: darkgray;
-    font-size: 20px;
-}
-
-.material-detail-top-header {
-    margin-left: 50px;
-    margin-right: 50px;
-    margin-bottom:20px;
-    width: 95%;
-    border-bottom: solid 1px #000000;
-    clear: both;
-}
