--- a/style.css
+++ b/style.css
@@ -43,21 +43,44 @@ a {
 .entry-content.organisation {
     display: flex;
     flex-flow: row wrap;
-    justify-content: space-around;
-    align-items: stretch;
     min-width: 400px;
 }
 .organisation-left {
     flex: 0 25%;
+    border-left: 1px solid #CCCCCC;
+    border-right: 1px solid #CCCCCC;
+    padding: 0 15px 5px 5px;
 }
 div.organisation-left .organisation-image img{
     width: 100%; opacity: 0;
 }
+
 div.organisation-left .organisation-image{
-    width:100%;
-    background-size: cover;
-    background-position: center center;
+    width:103%;
+    background-size: contain;
+    background-position: left center;
+
 }
+
+div.organisation-left .image-alt, .autor-left .image-alt{
+    font-family: "Arial Black", Gadget, sans-serif;
+    font-weight: bold;
+    color: #000;
+    border: 1px solid steelblue;
+    padding: 10px 7px;
+    border-radius: 4px;
+}
+
+.alpika-logo{
+    float: left;
+    margin-right: 5px;
+}
+
+.ekd-logo {
+    width: 102px;
+    float: right;
+}
+
 .organisation-content {
     flex: 1;
     padding: 0 5%;
@@ -71,16 +94,35 @@ div.organisation-left .organisation-image{
 .entry-content.autor {
     display: flex;
     flex-flow: row wrap;
-    justify-content: space-around;
-    align-items: stretch;
     min-width: 400px;
 }
 .autor-left {
-    flex: 0 18%;
+    flex: 0 20%;
+    border-left: 1px solid #cccccc;
+    border-right: 1px solid #cccccc;
+    padding: 0px 5px;
+    background-color: gainsboro;
 }
+.autor-left .autor-image{
+    text-align: center;
+    margin-bottom: 20px;
+
+}
+
 .autor-left .autor-image img{
     width: 100%
 }
+
+.author-badge.grau{
+    width:100%;
+    height:180px;
+    background-image: url('http://material.rpi-virtuell.de/wp-content/uploads/2017/01/badge_grau.png');
+    background-repeat: no-repeat;
+    background-size: contain;
+    text-align: center;
+    padding: 50px 0;
+}
+
 .autor-content {
     flex: 1;
     padding: 0 5%;
@@ -169,9 +211,25 @@ a.cta-button {
 a.cta-button:hover{
     background-color: cornflowerblue;
     box-shadow: none;
+
 }
 
  /* right column meta items */
+
+div.materialpool-special-logo{
+    color:steelblue;
+    font-weight: bold;
+    border-bottom: 1px solid steelblue;
+    padding-bottom: 5px;
+    margin-bottom: 10px;
+    font-size: 160%;
+    line-height: 0.5;
+}
+div.materialpool-special-logo span{
+    font-size: initial;
+    color:#666;
+    font-weight: normal;
+}
 
 .material-meta-container div p{
     line-height: 1.4;
@@ -191,12 +249,16 @@ div.facet-treffer-mediatyps{
 
 
 .materialpool-template-material-organisation-logo {
-    background-position: left bottom;
+    background-position: left center;
     background-repeat: no-repeat;
     background-size: contain;
-    height: 100px;
     width: 100%;
     border: 1px solid #dddddd;
+    display:block;
+}
+.materialpool-template-material-organisation-logo img{
+    width: 100%;
+    opacity: 0;
 }
 .materialpool-template-material-autor-logo {
     background-position: center center;
@@ -282,6 +344,15 @@ h5.facet-label.suche{
 div.facetwp-facet-suche {
     margin: 0;
     width: 100%;
+}
+.facetwp-search::-moz-placeholder{
+    opacity: 0.4;
+}
+.facetwp-search::-webkit-input-placeholder{
+    opacity: 0.5;
+}
+.facetwp-search:-ms-input-placeholder{
+    opacity:0.3;
 }
 div.material-suche .facetwp-btn {
     border: 1px solid #ccc;
@@ -404,6 +475,7 @@ div.facet-treffer div.facet-treffer-mediatyps{
 .facet-tags {
     margin-top: 10px;
     margin-bottom: 10px;
+    clear: both;
 }
 
 .facet-rating {
