--- a/style.css
+++ b/style.css
@@ -196,7 +196,7 @@ div.material-detail-image, .material-detail .materialpool-template-material-pict
     border: 1px solid #FEDFB2;
 }
 .facet-treffer.special{
-    background:#ffee99;
+    background-color:#ffee99;
     border: 1px solid #FEDFB2;
     padding-bottom: 5px;
 }
