fixed accordion & text style

--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ h1, h2, h3, h4, h5, h6 {
     line-height: normal;
 }
 a {
-    color: steelblue;
+    color: #2E89C1;
     box-shadow:none !important;
 }
 
@@ -156,8 +156,12 @@ div.organisation-left .image-alt, .autor-left .image-alt{
     /*min-height: 100vh;*/
 }
 
-.material-column{
-
+div.material-column a{
+    color:#2E89C1;
+}
+div.material-column h4{
+    color:#666;
+    font-weight: bolder;
 }
 
 .material-detail-left {
@@ -219,7 +223,7 @@ div.material-detail-image, .material-detail .materialpool-template-material-pict
 }
 
 a.cta-button {
-    background-color: #0D5282;
+    background-color: #2E89C1;
     border: none;
     padding: 4px 20px;
     text-align: center;
@@ -321,7 +325,7 @@ div.facet-treffer-mediatyps{
     font-size: 30px;
     font-weight: 700;
     min-height: 5em;
-    color: #0D5282;
+    color: #2E89C1;
 }
 
 .startseite-block-header p {
@@ -455,7 +459,7 @@ div.material-suche .facetwp-btn:hover{
     font-family: 'Cairo','Open Sans',  sans-serif;
     font-size: 16px;
     font-weight: 700;
-    color: #0D5282;
+    color: #2E89C1;
 }
 
 .facet-treffer-content {
@@ -474,25 +478,25 @@ div.facet-treffer div.facet-treffer-mediatyps{
     font-size: 26px;
     font-weight: 100;
     margin: 0;
-    color: #0D5282;
+    color: #2E89C1;
 }
 .facet-treffer-content p {
     font-family: 'Cairo','Open Sans',  sans-serif;
     margin: 0;
 }
 .facet-treffer-content h2 a {
-    color: #0D5282;
+    color: #2E89C1;
     text-decoration: none;
     box-shadow: none;
 }
 
 .facet-treffer-content h2 a:hover {
-    color: #0D5282;
+    color: #2E89C1;
     box-shadow: none;
 }
 
 .facet-treffer-content .schlagworte {
-    color: #0D5282;
+    color: #2E89C1;
 }
 
 .facet-tags {
@@ -516,7 +520,7 @@ div.facet-treffer div.facet-treffer-mediatyps{
     margin-right: 5px;
     border-style: solid;
     border-width: 1px;
-    border-color: #0D5282;
+    border-color: #2E89C1;
     border-top-left-radius: 0.3em 0.3em;
     border-bottom-right-radius: 0.3em 0.3em;
     border-top-right-radius: 0.3em;
@@ -571,7 +575,7 @@ search-description {
     color: #ffffff;
 }
 .icon-blau {
-    color: #0D5282;
+    color: #2E89C1;
 }
 
 .facet-treffer-content .materialpool-template-material-picture-facet {
