--- a/style.css
+++ b/style.css
@@ -40,21 +40,53 @@ a {
 
 /* single-themenseite  ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++*/
 
-div.themenseite-gruppe h3{
+.themenseite-gruppe{
+    background-color: #eee;
+    padding:10px;
+    margin-bottom:30px;
+}
+
+.themenseite-gruppe h3{
     display: block;
     background-color: #337A9A;
     color: white;
+    box-shadow: 2px 2px 4px 0 #ccc;
 }
 
-div.themenseite-gruppe .material-results{
+.themenseite-gruppe .material-results{
     margin-bottom:50px;
     padding: 0;
     -moz-column-gap: 1.5em;
     -webkit-column-gap: 1.5em;
     column-gap: 1.5em;
     font-size: .85em;
-    column-count: 3;
+
 }
+
+
+@media only screen and (min-width: 600px) {
+    .themenseite-gruppe .material-results {
+        -moz-column-count: 2;
+        -webkit-column-count: 2;
+        column-count: 2;
+    }
+}
+@media only screen and (min-width: 900px) {
+    .themenseite-gruppe .material-results {
+        -moz-column-count: 3;
+        -webkit-column-count: 3;
+        column-count: 3;
+    }
+}
+
+@media only screen and (min-width: 1200px) {
+    .themenseite-gruppe .material-results {
+        -moz-column-count: 4;
+        -webkit-column-count: 4;
+        column-count: 4;
+    }
+}
+
 
 .themenseite-gruppe .facet-treffer{
 
